[package]
name = "httphealth"
version = "1.0.0"
edition = "2024"
description = "A binary for performing HTTP based health checks in a Docker container"
license = "MIT"
keywords = ["health", "check", "healthcheck", "http"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/main.rs",
    "README.md",
]

[dependencies]
ureq = { version = "3.1.2", default-features = false, features = ["gzip"] }
