[package]
name = "httphealth"
version = "2.0.1"
edition = "2024"
description = "A binary for performing HTTP based health checks in a Docker container"
license = "MIT"
keywords = ["healthcheck", "http", "docker", "kubernetes"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/main.rs",
    "README.md",
]

[dependencies]
ureq = { version = "3.1.2", default-features = false, features = ["gzip"] }
